--- a/README.html
+++ b/README.html
@@ -167,10 +167,14 @@ pre code {
 </div>
 
 
+<div id="nut-free-food" class="section level1">
+<h1>Nut free food</h1>
 <p>Collection of peanut and tree nut free foods from selected countries.</p>
 <p>Data obtained from <a href="https://world.openfoodfacts.org">Open Food Facts</a>.</p>
 <p>Dashboard created with <a href="https://hafen.github.io/trelliscopejs/">trelliscope</a>.</p>
 <p>Provided without any guarantees. Use at your own risk.</p>
+<p><strong><a href="html/index.html">Trelliscope Dashboard here</a></strong></p>
+</div>
 
 
 
